# markdown-include

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  Readme.md  __init__.py  md_include.py  pyproject.toml  tasks.py  test_md_include.py
.github/workflows/: main.yml
pelican/plugins/md_include/: __init__.py  md_include.py  test_md_include.py
